--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,26 +12,30 @@ body{
 
 header{
     background-color: red;
-    margin-left: 7rem;
+    margin-left: 8rem;
     margin-right: 8rem;
     padding-left: 3rem; 
     padding-right: 4rem;   
 }
 .conteiner{
-    margin-left: 7rem;
+    margin-left: 8rem;
     margin-right: 8rem;
 }
 .logo{
     width: 60rem;
     height: 50rem;
-    margin-left: 35rem;
+    margin-left: 8rem;
     padding-top: 5rem;
-    padding-bottom: 8rem;
+    padding-bottom: 10rem;
 }
 .man_inv{
-    background-color: white;
+    background-color: pink;
     color: green;
     font-size: 5rem;
+    text-align: center;
+    margin-left: 8rem;
+    margin-right: 8rem;
+    padding-top: 3rem;
 }
 .man_inv_pa{
     background-color: blueviolet;
@@ -41,12 +45,27 @@ header{
     padding-left: 8rem;
     padding-right: 8rem;
     margin-top: 2rem;
+    border-color: blue;
 
 }
 .man_img{
     width: 60rem;
     height: 50rem;
-    margin-left: 35rem;
-    padding-top: 5rem;
-    padding-bottom: 8rem;
+    margin-left: 20rem;
+    padding-top: 8rem;
+    padding-bottom: 10rem;
+}
+footer{
+    background-color: yellow;
+    font-size: 2rem;
+    margin-left: 8rem;
+    margin-right: 8rem;
+    text-align: center;
+}
+@media (min-width: 600px){
+
+}
+
+@media (min-width: 800px){
+
 }
