--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 header{
-    background-color: red;
+    background-color: blueviolet;
     margin-left: 8rem;
     margin-right: 8rem;
     padding-left: 3rem; 
@@ -20,17 +20,17 @@ header{
 .conteiner{
     margin-left: 8rem;
     margin-right: 8rem;
+    background-color: blueviolet;
 }
 .logo{
     width: 60rem;
     height: 50rem;
-    margin-left: 8rem;
+    margin-left: 24rem;
     padding-top: 5rem;
     padding-bottom: 10rem;
 }
 .man_inv{
-    background-color: pink;
-    color: green;
+    color: white;
     font-size: 5rem;
     text-align: center;
     margin-left: 8rem;
